--- a/css/app.css
+++ b/css/app.css
@@ -67,11 +67,88 @@ body {
 .app {
     margin-top: 2rem;
     padding: 0 2rem;
-    display: flex;
     flex-direction: row;
     width: 100vw;
     gap: 2rem;
     overflow-x: hidden;
+    display: none;
+}
+
+.section-loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9999999; 
+}
+  
+.section-loader .loader {
+    position: relative; 
+}
+  
+.section-loader .loader div {
+    box-sizing: content-box;
+    position: absolute;
+    border-width: 4px;
+    border-style: solid;
+    opacity: 1;
+    border-radius: 50%;
+    -webkit-animation: loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+    animation: loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite; 
+}
+  
+.section-loader .loader div:nth-child(1) {
+    border-color: #E91E63; 
+}
+  
+.section-loader .loader div:nth-child(2) {
+    border-color: #0dbda1;
+    -webkit-animation-delay: -0.5s;
+    animation-delay: -0.5s; 
+}
+  
+.section-loader .loader {
+    width: 200px !important;
+    height: 200px !important;
+    -webkit-transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
+    transform: translate(-100px, -100px) scale(1) translate(100px, 100px); 
+}
+  
+@keyframes loader {
+    0% {
+      top: 94px;
+      left: 94px;
+      width: 0;
+      height: 0;
+      opacity: 1; 
+    }
+
+    100% {
+      top: 57px;
+      left: 57px;
+      width: 74px;
+      height: 74px;
+      opacity: 0; 
+    } 
+}
+
+@-webkit-keyframes loader {
+    0% {
+      top: 94px;
+      left: 94px;
+      width: 0;
+      height: 0;
+      opacity: 1; 
+    }
+
+    100% {
+      top: 57px;
+      left: 57px;
+      width: 74px;
+      height: 74px;
+      opacity: 0; 
+    } 
 }
 
 .app .clearfix {
@@ -444,6 +521,12 @@ body {
     background: linear-gradient(to right, #FFBE0B, #F42B03);
 }
 
+.pdfobject-container { 
+    height: 30rem; 
+    border: 1rem solid rgba(0,0,0,.1); 
+    width: 100%;
+}
+
 .app .container .content .box p {
     position: relative;
     font-size: 20px;
@@ -651,6 +734,7 @@ progress[value]::-moz-progress-bar {
     -webkit-line-clamp: 2;
             line-clamp: 2; 
     -webkit-box-orient: vertical;
+    text-transform: uppercase;
 }
 
 .app .container .content .box .expose .secondary {
@@ -720,6 +804,7 @@ progress[value]::-moz-progress-bar {
 
 .app .container .content .box .expose .secondary .list .item .text .used {
     font-size: 15px;
+    text-transform: uppercase;
 }
 
 .app .container .content .box .expose .secondary .list .item .arrow {
@@ -846,6 +931,10 @@ progress[value]::-moz-progress-bar {
 
     .app .container .content {
         display: block;
+    }
+
+    .app .container .content#resume {
+        display: none;
     }
 
     .app .container .content .box .expose .primary {
