--- a/css/app.css
+++ b/css/app.css
@@ -101,6 +101,7 @@ body {
     height: 100%;
     z-index: 4;
     max-width: 374px;
+    max-height: calc(100vh - 2rem);
 }
 
 .app .profile-box .profile-img {
@@ -158,6 +159,8 @@ body {
     flex-direction: column;
     gap: 1rem;
     width: 100%;
+    height: 100%;
+    overflow-y: auto;
 }
 
 .app .profile-box .profile .contact .social {
@@ -270,6 +273,8 @@ body {
 .app .profile-box .profile .contact .card .detail .data a {
     margin: 0.3rem 0;
     display: block;
+    width: 100%;
+    overflow: auto;
 } 
 
 .app .profile-box .profile .contact .card .download {
@@ -531,19 +536,19 @@ body {
 
 .app .container .content .box .expose {
     display: flex;
-    justify-content: space-between;
     gap: 4rem;
 }
 
 .app .container .content .box .expose .primary {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
-    gap: 2rem;
-    width: 100%;
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .app .container .content .box .expose .primary .card {
-    width: 100%;
+    flex: 0 0 auto;
+    text-align: center;
     background-color: #F8F2EC;
     border-radius: 10px;
     overflow: hidden;
@@ -551,9 +556,20 @@ body {
 
 .app .container .content .box .expose .primary .card .img {
     width: 100%;
-    height: 14rem;
     overflow: hidden;
     position: relative;
+}
+
+.app .container .content .box .expose .primary .card .img img {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    width: 100%;
+}
+
+.app .container .content .box .expose .primary .card .img:hover img {
+    opacity: 0.7;
+    transition: all 100ms ease-in-out;
 }
 
 .app .container .content .box .expose .primary .card .img .action {
@@ -562,11 +578,6 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
-}
-
-.app .container .content .box .expose .primary .card .img img {
-    width: 100%;
-    height: 100%;
 }
 
 .app .container .content .box .expose .primary .card .img:hover .action {
@@ -584,12 +595,6 @@ body {
     color: white;
     cursor: pointer;
 }
-
-.app .container .content .box .expose .primary .card .img:hover img {
-    opacity: 0.7;
-    transition: all 100ms ease-in-out;
-}
-
 
 .app .container .content .box .expose .primary .card .detail {
     margin: 0.5rem 2rem 1rem;
@@ -614,11 +619,11 @@ body {
 }
 
 .app .container .content .box .expose .secondary {
+    flex: 0 1 25%;
     background-color: var(--main-bg);
-    width: 350px;
+    max-width: fit-content;
     padding: 1rem 2rem;
     border-radius: 10px;
-    /* height: 100%; */
 }
 
 .app .container .content .box .expose .secondary .more {
@@ -694,10 +699,28 @@ body {
 
 /** =======Style for responsive======= **/
 
-@media screen and (max-width : 1780px) {
+@media screen and (max-width : 1800px) {
     .app .container .content .box .expose {
         flex-direction: column;
         gap: 3rem;
+    }
+
+    .app .container .contact .box .expose .primary {
+        flex: 1 0 auto;
+    }
+
+    .app .container .content .box .expose .primary .card {
+        flex: 0 0 calc(33.33% - 0.67rem);
+    }
+
+    .app .container .content .box .expose .secondary {
+        max-width: inherit;
+    }
+}
+
+@media screen and (max-width: 1680px) {
+    .app .container .content .box .expose .primary .card {
+        flex-basis: calc(50% - 1rem);
     }
 }
 
@@ -718,6 +741,12 @@ body {
     }
 }
 
+@media screen and (max-width: 1180px) {
+    .app .container .content .box .expose .primary .card {
+        flex-basis: calc(100%);
+    }
+}
+
 @media screen and (max-width : 979px) {
     .app {
         flex-direction: column;
@@ -732,6 +761,7 @@ body {
     .app .profile-box {
         position: relative;
         margin-bottom: 2rem;
+        min-height: 680px;
     }
 
     .app .container .navbar {
@@ -746,12 +776,18 @@ body {
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     }
 
-    .app .container .content .box .expose .primary {
-        grid-template-columns: repeat(auto-fit, minmax(295px, 1fr));
+    .app .container .content .box .expose .primary .card {
+        flex-basis: calc(50% - 1rem);
     }
 
     .app .container #resume {
         display: none;
+    }
+}
+
+@media screen and (max-width: 630px) {
+    .app .container .content .box .expose .primary .card {
+        flex-basis: calc(100%);
     }
 }
 
@@ -767,30 +803,15 @@ body {
     }
 
     .app .container .content {
-        padding: 2rem;
+        padding: 2rem 1rem;
     }
 
     .app .container .content .box .dropper {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
-
-    .app .container .content .box .expose .primary {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    }
-
-    .app .container .content .box .expose .secondary {
-        width: 100%;
-    }
 }
 
-@media screen and (max-width : 470px) {
-    .app .container .content {
-        padding: 2rem 1rem;
-    }
-}
-
-
-/** ================= **/
+/** =====Universal======= **/
 .divider {
     width: 100%;
     height: 1px;
