--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,4 @@
-/* =========Local Fohts=========== */
+/* =========Local Fonts=========== */
 @font-face {
     font-family: Overpass;
     src: url('../Fonts/overpass-regular.otf');
@@ -49,6 +49,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 body {
