--- a/css/app.css
+++ b/css/app.css
@@ -440,6 +440,10 @@ body {
     text-align: justify;
 }
 
+.app .container .content .box p.indentation {
+    text-indent: 50px;
+}
+
 .app .container .content .box .education {
     display: flex;
     gap: 1rem;
@@ -497,7 +501,7 @@ body {
 .app .container .content .box .dropper .skill .list .lang {
     font-family: Overpass;
     font-size: 20px;
-    color: #6C757D;;
+    color: #6C757D;
     text-transform: uppercase;
 }
 
@@ -564,30 +568,41 @@ body {
     width: 100%;
     overflow: hidden;
     position: relative;
+    cursor: pointer;
 }
 
 .app .container .content .box .expose .primary .card .img img {
     max-width: 100%;
+    min-height: 100%;
     height: auto;
     object-fit: cover;
+    transition: transform 0.3s;
+    cursor: pointer;
     width: 100%;
 }
 
 .app .container .content .box .expose .primary .card .img:hover img {
-    opacity: 0.7;
-    transition: all 100ms ease-in-out;
+    transform: scale(1.1);
 }
 
 .app .container .content .box .expose .primary .card .img .action {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: none;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s;
 }
 
 .app .container .content .box .expose .primary .card .img:hover .action {
-    display: block;
+    opacity: 1;
 }
 
 .app .container .content .box .expose .primary .card .img:hover .action button {
@@ -814,6 +829,10 @@ body {
 
     .app .container .content .box .dropper {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .app .container .content .box p.indentation {
+        text-indent: 0;
     }
 }
 
