Update images, favicon, and project listings
Replaced JPEG images and favicon with PNG/JPG formats for better compatibility and optimization. Updated project showcase in index.html to reflect new and reordered projects, removed deprecated projects, and adjusted skill categories. Modified CSS for improved image display and layout responsiveness.

--- a/css/app.css
+++ b/css/app.css
@@ -589,8 +589,9 @@ body {
 }
 
 .app .container .content .box .expose .primary .card .img img {
-    max-width: 100%;
-    min-height: 100%;
+    /* max-width: 420px; */
+    min-width: 100%;
+    max-height: 180px;
     height: auto;
     object-fit: cover;
     transition: transform 0.3s;
@@ -824,7 +825,7 @@ body {
     .app .profile-box {
         position: relative;
         margin-bottom: 2rem;
-        min-height: 680px;
+        /* min-height: 680px; */
     }
 
     .app .container .navbar {
